--- a/code/html/index.html
+++ b/code/html/index.html
@@ -47,15 +47,17 @@
               <tr class="accordion">
                 <td >
                   <div class="accordionContent">
-                    <label class="checkboxContainer">Faster R-CNN Object Detection
-                      <input type="checkbox" id="detectObjectCheckmark" checked="checked"/>
+                    <label class="checkboxContainer">Show People
+                      <input type="checkbox" id="showPeople" checked="checked"/>
                       <span class="checkmark"></span>
                     </label>
-                    <label class="checkboxContainer">AWS Rekognition Object Detection
-                      <input type="checkbox" id="awsRekognitionCheckmark"/>
+                    <label class="checkboxContainer">Show Dogs
+                      <input type="checkbox" id="showDogs" checked="checked"/>
                       <span class="checkmark"></span>
                     </label>
-                    <lable class="information" id="objectDetectionInfo">ⓘ Object Detection Information
+                    <label class="checkboxContainer">Show All
+                      <input type="checkbox" id="showAll" />
+                      <span class="checkmark"></span>
                     </label>
                   </div>
                 </td>
@@ -95,22 +97,15 @@
       </tr>
     </table>
 
-    <div id="hiddenCanvas" hidden>
+<!---    <div id="hiddenCanvas" hidden>
       <canvas id="originalCanvas" width="2000" height="1300"></canvas>
     </div>
 
     <canvas id="exampleCanvas" width="2000" height="1300"></canvas>
     <div id="status"></div>
-    <input id="clearDrawButton" type="button" value="Clear">
+    <input id="clearDrawButton" type="button" value="Clear"> --->
 
 
-    <div class="modalView">
-      <div class="modalContent">
-        <span class="closeModal">&times;</span>
-        <p class="modalHeading">Modal Heading</p>
-        <p class="modalText">Some text in the Modal..</p>
-      </div>
-    </div>
 
     <input type="file" name="fileUpload" id="fileUpload" hidden/>
 
@@ -136,30 +131,6 @@
           });
         }
       );
-
-      $(window).on("click", function(e){
-        if (e.target.className == "modalView") {
-          $(".modalView").attr("style", "display:none");
-        }
-      });
-
-      $("#haarCascadeInfo").on("click", function(e){
-
-        $(".modalHeading").text("Haar Cascade");
-        $(".modalText").text("Haar Cascades trade accuracy for speed. These examples show Haar Cascades are less accurate than OpenCV DNN object detection or AWS Rekognition. The cascades work best if you already know the type of object in the image. The human face and cat face cascades come standard with OpenCV. The dog face cascade is from github.com/metinozkan. Many Thanks!");
-        $(".modalView").attr("style", "display:block");
-      });
-
-      $("#objectDetectionInfo").on("click", function(e){
-
-        $(".modalHeading").text("Object Detection");
-        $(".modalText").text("OpenCV provides a Deep Neural Network (DNN) for object detection. It supports models in Caffe, Darknet, Torch, and TensorFlow. This demo runs serverlessly on AWS Lambda. The Lambda function contains two AWS Lambda Layers, one for OpenCV and a second for the TensorFlow Model. This example uses Faster_RCNN_Inception_v2 as the model. You can also directly compare results between OpenCV and AWS Rekognition. AWS Rekognition is superior in many cases, but costs $0.01 per 10 calls beyond the AWS free tier. Sample images are courtesy of Pexels.com.");
-        $(".modalView").attr("style", "display:block");
-      });
-
-      $(".closeModal").on("click", function(e){
-        $(".modalView").attr("style", "display:none");
-      });
 
       $("#confidenceLevelText").on("change", function(e)
         {
@@ -281,7 +252,7 @@
           $("#dragOverText").hide();
           $("#inputViewer").show();
 
-          loadHiddenCanvas($(this).attr("src"));
+//          loadHiddenCanvas($(this).attr("src"));
         });
 
         $("#fileUpload").on("change", function () {
@@ -371,8 +342,8 @@
             $("#responseImage").show();
 
             // set the image source (can be any url - I used data URI to keep demo self contained)
-        //    canvasImage.src = dataString;
-            loadCanvasImage(dataString);
+
+            //loadCanvasImage(dataString);
           };
         };
 
@@ -382,15 +353,11 @@
 
           var detectObjectChecked = $("#detectObjectCheckmark").prop("checked");
           var awsRekognitionChecked = $("#awsRekognitionCheckmark").prop("checked");
-          var showLabelChecked = $("#showLabelCheckmark").prop("checked");
-          var showConfidenceChecked = $("#showConfidenceCheckmark").prop("checked");
           var confidenceLevel = parseInt($("#confidenceLevelText").val());
 
           var optionURL = JSON.stringify({"imageData":dataURL,
                                           "detectObject":detectObjectChecked,
                                           "awsRekognition":awsRekognitionChecked,
-                                          "showLabel":showLabelChecked,
-                                          "showConfidence":showConfidenceChecked,
                                           "confidenceLevel":confidenceLevel
                                         });
           xhr.send(optionURL);
@@ -409,7 +376,7 @@
       }
 
 
-      $("#clearDrawButton").on("click", function(){
+  /*    $("#clearDrawButton").on("click", function(){
         if(isClearButton){
           $("#clearDrawButton").prop("value", "Draw");
           isClearButton = false;
@@ -455,8 +422,6 @@
           var aCanvas = $("#originalCanvas")[0];
           var originalCTX = aCanvas.getContext('2d');
           var ctx = this.getContext('2d');
-//          ctx.fillStyle = "rgba(255,0,0,0)";
-//          ctx.fillRect(0,0,10,10);
           var imgData = originalCTX.getImageData(x, y, 10, 10);
           ctx.putImageData(imgData, x, y);
           var p = c.getImageData(x, y, 1, 1).data;
@@ -467,7 +432,7 @@
 
       $('#exampleCanvas').mousedown(function(e) {
         clicking = true;
-      });
+      }); */
 
       $(document).mouseup(function(e){
         clicking = false;
@@ -486,7 +451,7 @@
           return undefined;
       }
 
-      function loadHiddenCanvas(anImageSource)
+/*      function loadHiddenCanvas(anImageSource)
       {
         var aCanvas = $("#originalCanvas")[0];
         var aContext = aCanvas.getContext('2d');
@@ -508,13 +473,10 @@
 
         canvasImage.onload = function() {
           context.drawImage(canvasImage, 0, 0);
-          alert("Canvas change");
         }
 
         canvasImage.src = aDataString;
-      }
-
-
+      } */
 
     </script>
   </body>
