--- a/code/html/index.html
+++ b/code/html/index.html
@@ -351,6 +351,10 @@
           var dataURL = dataURLString.replace(/^data:image\/[a-z]+;base64,/, "");
           console.log("dataURL = " + dataURL);
 
+          var showPeopleChecked = $("#showPeople").prop("checked");
+          var showDogsChecked = $("#showDogs").prop("checked");
+          var showAllChecked = $("#showAll").prop("checked");
+
           var detectObjectChecked = $("#detectObjectCheckmark").prop("checked");
           var awsRekognitionChecked = $("#awsRekognitionCheckmark").prop("checked");
           var confidenceLevel = parseInt($("#confidenceLevelText").val());
@@ -358,6 +362,9 @@
           var optionURL = JSON.stringify({"imageData":dataURL,
                                           "detectObject":detectObjectChecked,
                                           "awsRekognition":awsRekognitionChecked,
+                                          "showPeople":showPeopleChecked,
+                                          "showDogs":showDogsChecked,
+                                          "showAll":showAllChecked,
                                           "confidenceLevel":confidenceLevel
                                         });
           xhr.send(optionURL);
